stateDiagram-v2
    [*] --> configuring
    configuring --> container_launched
    container_launched --> awaiting_container_boot
    awaiting_container_boot --> waiting_for_series_bootstrap
    waiting_for_series_bootstrap --> awaiting_first_snapshot
    awaiting_first_snapshot --> live
    live --> degraded
    degraded --> live
    live --> completed
    live --> stopped
    live --> crashed
    degraded --> stopped
    degraded --> degraded_terminal
    awaiting_container_boot --> startup_failed
    waiting_for_series_bootstrap --> startup_failed
    awaiting_first_snapshot --> startup_failed
    completed --> [*]
    stopped --> [*]
    startup_failed --> [*]
    crashed --> [*]
    degraded_terminal --> [*]
